--- a/kafka.html
+++ b/kafka.html
@@ -58,11 +58,11 @@
                 <img class="cover1" src="assets/white_fingerprint_icon.png" alt="alt text" />
                 <div class="flex_row">
                     <div class="flex_col1">
-                        <button class="content_box" onclick="playJeta()">
+                        <button class="content_box" onclick="playSound(jeta)">
                             <h1 class="hero_title2">Jeta</h1>
                             <img class="image2" src="assets/pink_triangle_shape.png" alt="alt text" />
                         </button>
-                       <button class="content_box1" onclick="personaliteti()">
+                       <button class="content_box1" onclick="playSound(personaliteti)">
                             <h1 class="hero_title21">Personaliteti</h1>
                             <img class="image21" src="assets/pink_triangle_shape.png" alt="alt text" />
                        </button>
@@ -84,11 +84,11 @@
                         <div id="input"></div>
                     </div>
                     <div class="flex_col3">
-                        <button class="content_box4" onclick="faji()">
+                        <button class="content_box4" onclick="playSound(faji)">
                             <h1 class="hero_title24">Ndjenja e fajit</h1>
                             <img class="image24" src="assets/pink_triangle_shape.png" alt="alt text" />
                         </button>
-                        <button class="content_box5" onclick="metamorfoza()">
+                        <button class="content_box5" onclick="playSound(metamorfoza)">
                             <h1 class="hero_title25">Metamorfoza</h1>
                             <img class="image25" src="assets/pink_triangle_shape.png" alt="alt text" />
                         </button>
@@ -101,11 +101,7 @@
         </section>
 
     </main>
-<script src="script.js">
-  document.addEventListener("DOMContentLoaded", function(){
-    kafka()
-  })
-</script>
+<script src="script.js"></script>
 </body>
 
 </html>
